--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.13",
-    "@types/react": "^19.1.8",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19.1.6",
     "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.5",
@@ -42,6 +42,6 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3"
+    "typescript": "5.9.3"
   }
 }
